# archer-rs

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  logging.toml  package.json  rustfmt.toml  webpack.config.js
src/: download.rs  event.rs  main.rs  model.rs  storage.rs  task.rs
src/download/: mod.rs  pool.rs
src/parser/: css.rs  html.rs  mod.rs
src/server/: mod.rs  overview.rs
src/tasks/: mod.rs  resource.rs
src/web/: index.html
src/web/scripts/: consts.js  index.js  reducers.js  store.js
src/web/scripts/app/: reducer.js
src/web/scripts/app/components/: Navigation.js
src/web/scripts/app/containers/: App.js
src/web/scripts/overview/: actions.js  reducer.js
src/web/scripts/overview/components/: EnqueueWebsiteDialog.js
src/web/scripts/overview/containers/: OverviewPage.js
