[package]
name = "archer"
version = "0.1.0"
authors = ["Markus Siemens <markus@m-siemens.de>"]

[profile.release]
opt-level = 3
debug = true

[dependencies]
chan = "~0.1.14"
cssparser = "~0.4.0"
html5ever = "~0.2.11"
hyper = "~0.7.2"
log = "~0.3"
log4rs = "~0.3.3"
rusqlite = "~0.6.0"
mime = "~0.1.1"
num_cpus = "~0.2"
phf = "~0.7.10"
phf_macros = "~0.7.10"
rand = "~0.3"
rust-crypto = "~0.2.34"
tendril = "~0.1.6"
time = "~0.1.0"
url = "~0.5.2"

clippy = "*"